--- a/resources/css/assets/css/components/button.css
+++ b/resources/css/assets/css/components/button.css
@@ -2,18 +2,16 @@
     display: inline-block;
     text-decoration: none;
     height: 42px;
-    line-height: 36px;
+    line-height: 40px;
     padding: 0 18px;
-    
     border-radius: var(--rounded-lg);
-    border: 2px solid rgb(var(--button-border-color), 0.2);
+    border: 1px solid rgb(var(--button-border-color), 0.2);
     text-shadow: 0 1px 2px rgb(0, 0, 0, 0.2);
     box-shadow: 0 1px 3px rgb(0, 0, 0, 0.2);
     cursor: pointer;
     transition: all 0.2s;
     font-weight: 600;
 }
-
 .btn:hover {
     box-shadow: 0 2px 2px rgb(0, 0, 0, 0.2);
 }
@@ -27,10 +25,6 @@
 }
 .btn-disabled {
     opacity: 0.5;
-    pointer-events: none;
-    cursor: default;
-}
-.btn-no-anim {
     pointer-events: none;
     cursor: default;
 }
@@ -114,10 +108,7 @@
     color: #ffffff !important;
 }
 .btn-success:hover {
-    border: 2px solid var(--success-500);
-    background: transparent;
-    color: var(--success-500) !important;
-
+    background: var(--success-400);
 }
 .btn-success:active {
     background: var(--success-300);
@@ -127,10 +118,7 @@
     color: #ffffff !important;
 }
 .btn-danger:hover {
-    border: 2px solid var(--danger-600);
-    background: transparent;
-    color: var(--danger-600) !important;
-
+    background: var(--danger-500);
 }
 .btn-danger:active {
     background: var(--danger-400);
@@ -140,10 +128,7 @@
     color: #ffffff !important;
 }
 .btn-warning:hover {
-    border: 2px solid var(--warning-800);
-    background: transparent;
-    color: var(--warning-800) !important;
-
+    background: var(--warning-700);
 }
 .btn-warning:active {
     background: var(--warning-600);
@@ -152,20 +137,8 @@
     background: var(--info-600);
     color: #ffffff !important;
 }
-.btn-gold {
-    background: #FCAF3C;
-    color: #ffffff !important;
-}
-.btn-gold:hover {
-    border: 2px solid var(--warning-700);
-    background: transparent;
-    color: #ffffff !important;
-}
 .btn-info:hover {
-    border: 2px solid var(--info-500);
-    background: transparent;
-    color: var(--info-500) !important;
-
+    background: var(--info-500);
 }
 .btn-info:active {
     background: var(--info-400);
@@ -175,9 +148,7 @@
     color: #ffffff !important;
 }
 .btn-secondary:hover {
-    border: 2px solid var(--secondary-600);
-    background: transparent;
-    color: var(--secondary-600) !important;
+    background: var(--secondary-500);
 }
 .btn-secondary:active {
     background: var(--secondary-400);
@@ -187,8 +158,7 @@
     color: var(--btn-gray-color) !important;
 }
 .btn-gray:hover {
-    border: 2px solid rgb(var(--black-rgb), 0.06);
-    background: transparent;
+    background: rgb(var(--black-rgb), 0.06);
 }
 .btn-gray:active {
     background: rgb(var(--black-rgb), 0.08);
@@ -198,8 +168,7 @@
     color: #ffffff;
 }
 .btn-discord:hover {
-    border: 2px solid #6873f0;
-    background: transparent
+    background: #6873f0;
 }
 .btn-discord:active {
     background: #6e78e7;
@@ -213,6 +182,15 @@
 }
 .btn-upgrade:active {
     background: var(--upgrade-300);
+}
+.btn-gold {
+    background: #FCAF3C;
+    color: #ffffff !important;
+}
+.btn-gold:hover {
+    border: 2px solid var(--warning-700);
+    background: transparent;
+    color: #ffffff !important;
 }
 
 button {
