--- a/resources/css/assets/css/utilities.css
+++ b/resources/css/assets/css/utilities.css
@@ -1,6 +1,6 @@
 .container {
     padding-top: 100px;
-    padding-left: 60px;
+    padding-left: 240px;
     padding-right: 20px;
     max-width: 1400px;
     margin: 0 auto;
@@ -27,6 +27,14 @@
 .blog-thumbnail {
     border-radius: var(--rounded-md);
     box-shadow: 0 1px 1px rgb(0, 0, 0, 0.2);
+}
+
+.game-thumbnail {
+    border-radius: var(--rounded-md);
+    box-shadow: 0 1px 1px rgb(0, 0, 0, 0.2);
+    height: 160px;
+    width: auto;
+    object-fit: cover;
 }
 
 .vertical-align-middle {
@@ -110,6 +118,16 @@
 .text-info:active {
     color: var(--info-500) !important;
 }
+
+.text-gradient-icon:before {
+    background: -webkit-gradient(linear, left top, left bottom, from(var(--gray-600)), to(#fff));
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    display: initial; /* reset Font Awesome's display:inline-block */
+
+}
+
 .text-muted,
 .text-muted:hover,
 .text-muted:focus,
@@ -207,21 +225,11 @@
     background: #f5f5f5;
     border: 1px solid #cbcbcb;
 }
-
-.theme-circle.Light {
-    background: #f5f5f5;
-    border: 1px solid #cbcbcb;
-}
-
 .theme-circle.dark {
     background: #3b3b3b;
     border: 1px solid #626262;
 }
 
-.theme-circle.Dark {
-    background: #f5f5f5;
-    border: 1px solid #cbcbcb;
-}
 .theme-selection {
     height: 160px;
     display: flex;
