--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,6 +27,7 @@ Testing fonts
 
 * *::before *::after {
     -webkit-tap-highlight-color: transparent;
+    tap-highlight-color: transparent;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -87,8 +88,8 @@ Testing fonts
 
 .chat-container {
     -webkit-transform: translateZ(0);
-    transform: translateZ(0);
     -ms-transform: none;
+    transform: translateZ(0);
     position: fixed;
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
