--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,3 @@
-/*
-Testing fonts
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-*/
 @import url('https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap');
 @import url('assets/css/foundation.css');
 @import url("https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/0.6.1/preflight.min.css");
@@ -35,7 +31,7 @@ Testing fonts
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     scroll-behavior: smooth;
-    font-family: Lexend, Sans-Serif !important;
+    font-family: Lexend Deca, Sans-Serif !important;
 
 }
 ::-webkit-file-upload-button {
@@ -198,7 +194,6 @@ Testing fonts
 .chat-container .chat-main {
     position: relative;
 }
-
 .chat-container .chat-header {
     position: relative;
     z-index: 2020;
