--- a/public/assets/css/themes/variables-xmas.css
+++ b/public/assets/css/themes/variables-xmas.css
@@ -55,8 +55,8 @@
     --section-border-color: #c9e4e6;
     --section-shadow: 0, 0, 0;
 
-    --input-bg: #497174;
-    --input-border-color: #497174;
+    --input-bg: #D6E4E5;
+    --input-border-color: #c9e4e6;
 
     --sidebar-active-bg: 3, 155, 229, 0.2;
     --sidebar-active-color: #039be5;
