--- a/resources/css/assets/css/utilities.css
+++ b/resources/css/assets/css/utilities.css
@@ -258,19 +258,35 @@
 }
 .theme-circle.light {
     background: #f5f5f5;
-    border: 1px solid #cbcbcb;
+    border: 3px solid #cbcbcb;
 }
 .theme-circle.dark {
     background: #3b3b3b;
-    border: 1px solid #626262;
+    border: 3px solid #626262;
 }
 .theme-circle.amoled {
     background: #000000;
-    border: 1px solid #232323;
+    border: 3px solid #232323;
 }
 .theme-circle.discord {
     background: #8094dd;
-    border: 1px solid #6d8bf7;
+    border: 3px solid #232323;
+}
+.theme-circle.halloween {
+    background: #974c1a;
+    border: 3px solid #ff7c25;
+}
+.theme-circle.classic {
+    background: #243369;
+    border: 3px solid #6d8bf7;
+}
+.theme-circle.xmas {
+    background: #c6f2ff;
+    border: 3px solid #88c9ff;
+}
+.theme-circle.aeo {
+    background: #232323;
+    border: 3px solid #ffa228;
 }
 
 .theme-selection {
